# Sanger_OT_CARMA_refactor

./: README.md
01_test/: .Rhistory  01_full_nonfunc_run.R  02_L1_nonfunc_run.R  02_test_df.csv  03_L1_MCS_nonfunc_run.R  04_zero_MSC_run.R  05_prepare_units.R  CARMA_MCShotgun.R  CARMA_fixed_sigma.R  CARMA_funcs.R  CARMA_funcs_L1.R  CARMA_miscs.R  Zero_MCH_run.RData  new_MCS_fun.R  new_MCS_fun_sparse_matrix.R  outlier_ind_Normal_marginal.cpp  post_l.txt  post_l_poi_gamma.mtx  post_l_poi_likeli.txt  post_locus_1.txt  post_locus_1_poi_gamma.mtx  post_locus_1_poi_likeli.txt  post_locus_2.txt  post_locus_2_outliers.RData  post_locus_2_poi_gamma.mtx  post_locus_2_poi_likeli.txt  remains.R  zScores.txt
02_R_src/: 00_CARMA_function.R  ind_Normal_fixed_sigma_marginal.cpp  new_MCS_fun.R  new_MCS_fun_sparse_matrix.R  new_MCS_fun_vector.R
03_unit_R/: .Rhistory  00_unit_tests.R  02_APOE_z.csv
04_py_tests/: 03_MCS_run.ipynb  05_CARMA_func.ipynb  CMakeLists.txt  bindings.cpp  ind_normal_carma.py
04_py_tests/.ipynb_checkpoints/: 01_carma_ind_cpp-checkpoint.ipynb  01_test-checkpoint.ipynb  02_gamma_func-checkpoint.ipynb  04_MSC_as_function-checkpoint.ipynb  05_CARMA_func-checkpoint.ipynb  06_load_npy-checkpoint.ipynb
